--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Water Potability Classification` #\n",
+    "# `Predicting Stroke Occurance Using KNN Classification` #\n",
     "Gael Hernandez Palmer, Asha Octoman, Christina Yang, Julius Brooker"
    ]
   },
@@ -33,9 +33,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.0.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# loading packages\n",
     "library(repr)\n",
@@ -45,36 +107,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  id = \u001b[32mcol_double()\u001b[39m,\n",
+      "  gender = \u001b[31mcol_character()\u001b[39m,\n",
+      "  age = \u001b[32mcol_double()\u001b[39m,\n",
+      "  hypertension = \u001b[32mcol_double()\u001b[39m,\n",
+      "  heart_disease = \u001b[32mcol_double()\u001b[39m,\n",
+      "  ever_married = \u001b[31mcol_character()\u001b[39m,\n",
+      "  work_type = \u001b[31mcol_character()\u001b[39m,\n",
+      "  Residence_type = \u001b[31mcol_character()\u001b[39m,\n",
+      "  avg_glucose_level = \u001b[32mcol_double()\u001b[39m,\n",
+      "  bmi = \u001b[31mcol_character()\u001b[39m,\n",
+      "  smoking_status = \u001b[31mcol_character()\u001b[39m,\n",
+      "  stroke = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'id'</li><li>'gender'</li><li>'age'</li><li>'hypertension'</li><li>'heart_disease'</li><li>'ever_married'</li><li>'work_type'</li><li>'Residence_type'</li><li>'avg_glucose_level'</li><li>'bmi'</li><li>'smoking_status'</li><li>'stroke'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'id'\n",
+       "\\item 'gender'\n",
+       "\\item 'age'\n",
+       "\\item 'hypertension'\n",
+       "\\item 'heart\\_disease'\n",
+       "\\item 'ever\\_married'\n",
+       "\\item 'work\\_type'\n",
+       "\\item 'Residence\\_type'\n",
+       "\\item 'avg\\_glucose\\_level'\n",
+       "\\item 'bmi'\n",
+       "\\item 'smoking\\_status'\n",
+       "\\item 'stroke'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'id'\n",
+       "2. 'gender'\n",
+       "3. 'age'\n",
+       "4. 'hypertension'\n",
+       "5. 'heart_disease'\n",
+       "6. 'ever_married'\n",
+       "7. 'work_type'\n",
+       "8. 'Residence_type'\n",
+       "9. 'avg_glucose_level'\n",
+       "10. 'bmi'\n",
+       "11. 'smoking_status'\n",
+       "12. 'stroke'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"id\"                \"gender\"            \"age\"              \n",
+       " [4] \"hypertension\"      \"heart_disease\"     \"ever_married\"     \n",
+       " [7] \"work_type\"         \"Residence_type\"    \"avg_glucose_level\"\n",
+       "[10] \"bmi\"               \"smoking_status\"    \"stroke\"           "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# loading data\n",
-    "potability <- read_csv(\"data/water_potability.csv\")\n",
-    "potability"
+    "stroke <- read_csv(\"data/stroke-data.csv\")\n",
+    "colnames(stroke)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“Problem with `mutate()` input `bmi`.\n",
+      "\u001b[34mℹ\u001b[39m NAs introduced by coercion\n",
+      "\u001b[34mℹ\u001b[39m Input `bmi` is `as.numeric(bmi)`.”\n",
+      "Warning message in mask$eval_all_mutate(dots[[i]]):\n",
+      "“NAs introduced by coercion”\n"
+     ]
+    }
+   ],
    "source": [
-    "# cleaning and wrangling"
+    "# cleaning and wrangling\n",
+    "stroke_clean <- stroke %>%\n",
+    "    select(gender, age, hypertension, heart_disease, avg_glucose_level, bmi, smoking_status, stroke) %>%\n",
+    "    mutate(gender = as_factor(gender), \n",
+    "           bmi = as.numeric(bmi))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.333159405165667"
+      ],
+      "text/latex": [
+       "0.333159405165667"
+      ],
+      "text/markdown": [
+       "0.333159405165667"
+      ],
+      "text/plain": [
+       "[1] 0.3331594"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# data splitting"
+    "# data splitting\n",
+    "set.seed(1)\n",
+    "\n",
+    "stroke_split <- initial_split(stroke_clean, prop = 0.75, strata = stroke)\n",
+    "stroke_train <- training(stroke_split)\n",
+    "stroke_test <- testing(stroke_split)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +279,13 @@
     "## Significance ##\n",
     "..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
