accuracies from knn_results

--- a/test.ipynb
+++ b/test.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,19 +515,83 @@
     "  add_recipe(stroke_recipe) %>%\n",
     "  add_model(knn_spec) %>%\n",
     "  tune_grid(resamples = stroke_vfold, grid = k_vals) %>%\n",
-    "  collect_metrics() "
+    "  collect_metrics() \n",
+    "knn_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>11</li><li>16</li><li>21</li><li>26</li><li>31</li><li>36</li><li>41</li><li>46</li><li>51</li><li>56</li><li>61</li><li>66</li><li>71</li><li>76</li><li>81</li><li>86</li><li>91</li><li>96</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 11\n",
+       "\\item 16\n",
+       "\\item 21\n",
+       "\\item 26\n",
+       "\\item 31\n",
+       "\\item 36\n",
+       "\\item 41\n",
+       "\\item 46\n",
+       "\\item 51\n",
+       "\\item 56\n",
+       "\\item 61\n",
+       "\\item 66\n",
+       "\\item 71\n",
+       "\\item 76\n",
+       "\\item 81\n",
+       "\\item 86\n",
+       "\\item 91\n",
+       "\\item 96\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 11\n",
+       "2. 16\n",
+       "3. 21\n",
+       "4. 26\n",
+       "5. 31\n",
+       "6. 36\n",
+       "7. 41\n",
+       "8. 46\n",
+       "9. 51\n",
+       "10. 56\n",
+       "11. 61\n",
+       "12. 66\n",
+       "13. 71\n",
+       "14. 76\n",
+       "15. 81\n",
+       "16. 86\n",
+       "17. 91\n",
+       "18. 96\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] 11 16 21 26 31 36 41 46 51 56 61 66 71 76 81 86 91 96"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "k_nearest_neighbour <- knn_results %>%\n",
     "  filter(.metric == \"accuracy\") %>%\n",
-    "  filter(mean == min(mean)) %>%\n",
-    "  pull(neighbors)"
+    "  filter(mean == max(mean)) %>%\n",
+    "  pull(neighbors)\n",
+    "k_nearest_neighbour"
    ]
   },
   {
