--- a/test.ipynb
+++ b/test.ipynb
@@ -521,65 +521,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>11</li><li>16</li><li>21</li><li>26</li><li>31</li><li>36</li><li>41</li><li>46</li><li>51</li><li>56</li><li>61</li><li>66</li><li>71</li><li>76</li><li>81</li><li>86</li><li>91</li><li>96</li></ol>\n"
+       "<table>\n",
+       "<caption>A tibble: 18 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>neighbors</th><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>11</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model03</td></tr>\n",
+       "\t<tr><td>16</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model04</td></tr>\n",
+       "\t<tr><td>21</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model05</td></tr>\n",
+       "\t<tr><td>26</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model06</td></tr>\n",
+       "\t<tr><td>31</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model07</td></tr>\n",
+       "\t<tr><td>36</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model08</td></tr>\n",
+       "\t<tr><td>41</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model09</td></tr>\n",
+       "\t<tr><td>46</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model10</td></tr>\n",
+       "\t<tr><td>51</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model11</td></tr>\n",
+       "\t<tr><td>56</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model12</td></tr>\n",
+       "\t<tr><td>61</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model13</td></tr>\n",
+       "\t<tr><td>66</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model14</td></tr>\n",
+       "\t<tr><td>71</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model15</td></tr>\n",
+       "\t<tr><td>76</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model16</td></tr>\n",
+       "\t<tr><td>81</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model17</td></tr>\n",
+       "\t<tr><td>86</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model18</td></tr>\n",
+       "\t<tr><td>91</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model19</td></tr>\n",
+       "\t<tr><td>96</td><td>accuracy</td><td>binary</td><td>0.9538097</td><td>5</td><td>0.002285071</td><td>Model20</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
       ],
       "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 11\n",
-       "\\item 16\n",
-       "\\item 21\n",
-       "\\item 26\n",
-       "\\item 31\n",
-       "\\item 36\n",
-       "\\item 41\n",
-       "\\item 46\n",
-       "\\item 51\n",
-       "\\item 56\n",
-       "\\item 61\n",
-       "\\item 66\n",
-       "\\item 71\n",
-       "\\item 76\n",
-       "\\item 81\n",
-       "\\item 86\n",
-       "\\item 91\n",
-       "\\item 96\n",
-       "\\end{enumerate*}\n"
+       "A tibble: 18 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <dbl> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 11 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model03\\\\\n",
+       "\t 16 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model04\\\\\n",
+       "\t 21 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model05\\\\\n",
+       "\t 26 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model06\\\\\n",
+       "\t 31 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model07\\\\\n",
+       "\t 36 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model08\\\\\n",
+       "\t 41 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model09\\\\\n",
+       "\t 46 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model10\\\\\n",
+       "\t 51 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model11\\\\\n",
+       "\t 56 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model12\\\\\n",
+       "\t 61 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model13\\\\\n",
+       "\t 66 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model14\\\\\n",
+       "\t 71 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model15\\\\\n",
+       "\t 76 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model16\\\\\n",
+       "\t 81 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model17\\\\\n",
+       "\t 86 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model18\\\\\n",
+       "\t 91 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model19\\\\\n",
+       "\t 96 & accuracy & binary & 0.9538097 & 5 & 0.002285071 & Model20\\\\\n",
+       "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "1. 11\n",
-       "2. 16\n",
-       "3. 21\n",
-       "4. 26\n",
-       "5. 31\n",
-       "6. 36\n",
-       "7. 41\n",
-       "8. 46\n",
-       "9. 51\n",
-       "10. 56\n",
-       "11. 61\n",
-       "12. 66\n",
-       "13. 71\n",
-       "14. 76\n",
-       "15. 81\n",
-       "16. 86\n",
-       "17. 91\n",
-       "18. 96\n",
        "\n",
+       "A tibble: 18 × 7\n",
+       "\n",
+       "| neighbors &lt;dbl&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| 11 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model03 |\n",
+       "| 16 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model04 |\n",
+       "| 21 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model05 |\n",
+       "| 26 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model06 |\n",
+       "| 31 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model07 |\n",
+       "| 36 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model08 |\n",
+       "| 41 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model09 |\n",
+       "| 46 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model10 |\n",
+       "| 51 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model11 |\n",
+       "| 56 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model12 |\n",
+       "| 61 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model13 |\n",
+       "| 66 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model14 |\n",
+       "| 71 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model15 |\n",
+       "| 76 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model16 |\n",
+       "| 81 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model17 |\n",
+       "| 86 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model18 |\n",
+       "| 91 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model19 |\n",
+       "| 96 | accuracy | binary | 0.9538097 | 5 | 0.002285071 | Model20 |\n",
        "\n"
       ],
       "text/plain": [
-       " [1] 11 16 21 26 31 36 41 46 51 56 61 66 71 76 81 86 91 96"
+       "   neighbors .metric  .estimator mean      n std_err     .config\n",
+       "1  11        accuracy binary     0.9538097 5 0.002285071 Model03\n",
+       "2  16        accuracy binary     0.9538097 5 0.002285071 Model04\n",
+       "3  21        accuracy binary     0.9538097 5 0.002285071 Model05\n",
+       "4  26        accuracy binary     0.9538097 5 0.002285071 Model06\n",
+       "5  31        accuracy binary     0.9538097 5 0.002285071 Model07\n",
+       "6  36        accuracy binary     0.9538097 5 0.002285071 Model08\n",
+       "7  41        accuracy binary     0.9538097 5 0.002285071 Model09\n",
+       "8  46        accuracy binary     0.9538097 5 0.002285071 Model10\n",
+       "9  51        accuracy binary     0.9538097 5 0.002285071 Model11\n",
+       "10 56        accuracy binary     0.9538097 5 0.002285071 Model12\n",
+       "11 61        accuracy binary     0.9538097 5 0.002285071 Model13\n",
+       "12 66        accuracy binary     0.9538097 5 0.002285071 Model14\n",
+       "13 71        accuracy binary     0.9538097 5 0.002285071 Model15\n",
+       "14 76        accuracy binary     0.9538097 5 0.002285071 Model16\n",
+       "15 81        accuracy binary     0.9538097 5 0.002285071 Model17\n",
+       "16 86        accuracy binary     0.9538097 5 0.002285071 Model18\n",
+       "17 91        accuracy binary     0.9538097 5 0.002285071 Model19\n",
+       "18 96        accuracy binary     0.9538097 5 0.002285071 Model20"
       ]
      },
      "metadata": {},
@@ -587,11 +634,12 @@
     }
    ],
    "source": [
-    "k_nearest_neighbour <- knn_results %>%\n",
-    "  filter(.metric == \"accuracy\") %>%\n",
-    "  filter(mean == max(mean)) %>%\n",
-    "  pull(neighbors)\n",
-    "k_nearest_neighbour"
+    "accuracies <- knn_results %>% # Plot accuracies vs neighbours\n",
+    "  filter(.metric == \"accuracy\")\n",
+    "\n",
+    "optimal_neighbours <- accuracies %>%\n",
+    "  filter(mean == max(mean))\n",
+    "optimal_neighbours"
    ]
   },
   {
