--- a/test.ipynb
+++ b/test.ipynb
@@ -226,7 +226,9 @@
     "           bmi = as.numeric(bmi),\n",
     "           smoking_status = as_factor(smoking_status),\n",
     "           stroke = as_factor(stroke)) %>%\n",
-    "    filter(gender != \"Other\") #Other was removed as there was only one occurrence in the dataset"
+    "    filter(gender != \"Other\") #Other was removed as there was only one occurrence in the dataset\n",
+    "# prep and bake data with upsampling, then use it with everything\n",
+    "# gonna overfit data, data leakage"
    ]
   },
   {
