--- a/test.ipynb
+++ b/test.ipynb
@@ -268,49 +268,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upsampling"
+    "### Downsampling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error: Please select a single factor variable.\n",
-     "output_type": "error",
-     "traceback": [
-      "Error: Please select a single factor variable.\nTraceback:\n",
-      "1. recipe(stroke ~ ., data = stroke_train) %>% step_scale(all_predictors()) %>% \n .     step_center(all_predictors()) %>% step_downsample(stroke, \n .     over_ratio = 1, skip = FALSE) %>% prep()",
-      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "5. `_fseq`(`_lhs`)",
-      "6. freduce(value, `_function_list`)",
-      "7. withVisible(function_list[[k]](value))",
-      "8. function_list[[k]](value)",
-      "9. prep(.)",
-      "10. prep.recipe(.)",
-      "11. prep(x$steps[[i]], training = training, info = x$term_info)",
-      "12. prep.step_downsample(x$steps[[i]], training = training, info = x$term_info)",
-      "13. rlang::abort(\"Please select a single factor variable.\")",
-      "14. signal_abort(cnd)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds_recipe <- recipe(stroke ~ ., data = stroke_train) %>%\n",
     "    step_scale(all_predictors()) %>%\n",
     "    step_center(all_predictors()) %>%\n",
-    "    step_downsample(stroke, over_ratio = 1, skip = FALSE) %>%\n",
+    "    step_downsample(stroke, under_ratio = 1, skip = FALSE) %>%\n",
     "    prep()\n",
     "dsampled_stroke <- bake(ups_recipe, stroke_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
